testsuite/tests/properties/invalid_lazy_field/entity_info_1.lkt
import common

class FooNode implements Node[FooNode] {
}

class Example: FooNode {
    @lazy p: Bool = self.info.md.flag
}
